@@ -5,8 +5,8 @@
 namespace eval ::search::material {}
 
 image create photo button_oneplus -data {
-R0lGODlhFAAUAIAAAAAAAP///yH5BAEKAAEALAAAAAAUABQAAAIpjI+py+0P
-FwCSzVnlzZaaC3oJNooadyqmun4OGR1wHMxQ2HYgzfd+UgAAOw==
+  R0lGODlhFAAUAIAAAAAAAP///yH5BAEKAAEALAAAAAAUABQAAAIpjI+py+0P
+  FwCSzVnlzZaaC3oJNooadyqmun4OGR1wHMxQ2HYgzfd+UgAAOw==
 }
 
 set ignoreColors 0
@@ -56,14 +56,14 @@ proc makeBoolMenu {w varName} {
   upvar #0 $varName var
   if {![info exists var]} { set var "Yes" }
   menubutton $w -textvariable $varName -indicatoron 0 -menu $w.menu \
-    -relief raised -bd 2 -highlightthickness 2 -anchor w -image ""
+      -relief raised -bd 2 -highlightthickness 2 -anchor w -image ""
   menu $w.menu -tearoff 0
   $w.menu add radiobutton -label Yes -image ::rep::_tick \
-    -variable $varName -value Yes \
-    -command "$w configure -image ::rep::_tick" ;# -hidemargin 1
+      -variable $varName -value Yes \
+      -command "$w configure -image ::rep::_tick" ;# -hidemargin 1
   $w.menu add radiobutton -label No -image ::rep::_cross \
-    -variable $varName -value No \
-    -command "$w configure -image ::rep::_cross" ;# -hidemargin 1
+      -variable $varName -value No \
+      -command "$w configure -image ::rep::_cross" ;# -hidemargin 1
   return $w.menu
 }
 
@@ -72,14 +72,14 @@ proc makePieceMenu {w varName} {
   upvar #0 $varName var
   if {![info exists var]} { set var "?" }
   menubutton $w -textvariable $varName -indicatoron 0 -menu $w.menu \
-    -relief raised -bd 2 -highlightthickness 2 -anchor w -image ""
+      -relief raised -bd 2 -highlightthickness 2 -anchor w -image ""
   menu $w.menu -tearoff 0
   $w.menu add radiobutton -label " ? " -variable $varName -value "?" \
-    -command "$w configure -image e20" ;# -hidemargin 1
+      -command "$w configure -image e20" ;# -hidemargin 1
   foreach i {wk wq wr wb wn wp bk bq br bb bn bp} {
     $w.menu add radiobutton -label $i -image ${i}20 -value $i \
-      -variable $varName \
-      -command "$w configure -image ${i}20" ;# -hidemargin 1
+        -variable $varName \
+        -command "$w configure -image ${i}20" ;# -hidemargin 1
   }
   foreach i {" ? " wk bk} {
     $w.menu entryconfigure $i -columnbreak 1
@@ -124,7 +124,7 @@ proc ::search::material::any {} {
 
 proc clearPatterns {} {
   global pattPiece pattFyle pattRank pattBool nPatterns
-
+  
   for { set i 1 } { $i <= $nPatterns } { incr i } {
     set pattPiece($i) "?";  set pattFyle($i) "?";  set pattRank($i) "?"
     set pattBool($i) "Yes"
@@ -134,7 +134,7 @@ proc clearPatterns {} {
 
 proc setPatterns {pattlist} {
   global pattPiece pattFyle pattRank pattBool nPatterns
-
+  
   clearPatterns
   set count 1
   foreach patt $pattlist {
@@ -161,7 +161,7 @@ proc ::search::material {} {
   global glstart dark pMin pMax ignoreColors minMoveNum maxMoveNum
   global pattPiece pattFyle pattRank pattBool oppBishops nPatterns
   global minHalfMoves smDisplayed
-
+  
   set w .sm
   if {[winfo exists $w]} {
     wm deiconify $w
@@ -169,35 +169,35 @@ proc ::search::material {} {
     return
   }
   set small font_Small
-
+  
   toplevel $w
   wm title $w "Scid: $::tr(MaterialSearch)"
-#  button $w.piecelabel -font font_Bold -textvar ::tr(Material:) -command {
-#    if {$smDisplayed(Material)} {
-#      set smDisplayed(Material) 0
-#      pack forget .sm.q .sm.r .sm.b .sm.n .sm.m .sm.p .sm.b1 .sm.mdiff
-#    } else {
-#      set smDisplayed(Material) 1
-#      pack .sm.q .sm.r .sm.b .sm.n .sm.m .sm.p .sm.b1 .sm.mdiff \
-#        -after .sm.piecelabel
-#    }
-#  }
-
+  #  button $w.piecelabel -font font_Bold -textvar ::tr(Material:) -command {
+  #    if {$smDisplayed(Material)} {
+  #      set smDisplayed(Material) 0
+  #      pack forget .sm.q .sm.r .sm.b .sm.n .sm.m .sm.p .sm.b1 .sm.mdiff
+  #    } else {
+  #      set smDisplayed(Material) 1
+  #      pack .sm.q .sm.r .sm.b .sm.n .sm.m .sm.p .sm.b1 .sm.mdiff \
+  #        -after .sm.piecelabel
+  #    }
+  #  }
+  
   bind $w <F1> { helpWindow Searches Material }
   bind $w <Escape> "$w.b3.cancel invoke"
   bind $w <Return> "$w.b3.search invoke"
-
+  
   pack [frame $w.mp] -side top
   pack [frame $w.mp.material] -side left
-
+  
   label $w.mp.material.title -font font_Bold -textvar ::tr(Material:)
   pack $w.mp.material.title -side top -pady 3
-
+  
   foreach piece {q r b n m p} {
     frame $w.mp.material.$piece
     pack $w.mp.material.$piece -side top ;# -padx 2
   }
-
+  
   foreach i {q r b n m p} {
     set f $w.mp.material.$i
     button $f.w0 -text "0" -command "set pMin(w$i) 0; set pMax(w$i) 0"
@@ -208,11 +208,11 @@ proc ::search::material {} {
     label $f.wi -image w${i}20 -font font_Small
     label $f.wto -text "-" -font font_Small -padx 0
     entry $f.wmin -width 2 -relief sunken -textvar pMin(w$i) -font font_Small \
-      -justify right
+        -justify right
     entry $f.wmax -width 2 -relief sunken -textvar pMax(w$i) -font font_Small \
-      -justify right
+        -justify right
     pack $f.w0 $f.w1 $f.w2 $f.wa $f.w1p $f.wi $f.wmin $f.wto $f.wmax -side left -pady 1
-
+    
     pack [frame $f.space -width 20] -side left
     button $f.b0 -text "0" -command "set pMin(b$i) 0; set pMax(b$i) 0"
     button $f.b1 -text "1" -command "set pMin(b$i) 1; set pMax(b$i) 1"
@@ -222,11 +222,11 @@ proc ::search::material {} {
     label $f.bi -image b${i}20 -font font_Small
     label $f.bto -text "-" -font font_Small
     entry $f.bmin -width 2 -relief sunken -textvar pMin(b$i) -font font_Small \
-      -justify right
+        -justify right
     entry $f.bmax -width 2 -relief sunken -textvar pMax(b$i) -font font_Small \
-      -justify right
+        -justify right
     pack $f.b0 $f.b1 $f.b2 $f.ba $f.b1p $f.bi $f.bmin $f.bto $f.bmax -side left -pady 1
-
+    
     foreach b {0 1 2 a 1p} {
       $f.w$b configure -width 2 -pady 0 -padx 1 -takefocus 0 -font $small
       $f.b$b configure -width 2 -pady 0 -padx 1 -takefocus 0 -font $small
@@ -247,26 +247,26 @@ proc ::search::material {} {
       $f.ba configure -command "set pMin(bm) 0; set pMax(bm) 4"
     }
   }
-
+  
   # Buttons that manipulate material settings:
   set f $w.mp.material.b1
   pack [frame $f] -side top -ipady 2
-
+  
   dialogbutton $f.zero -textvar ::tr(Zero) -font $small -command ::search::material::zero
   dialogbutton $f.reset -textvar ::tr(Any) -font $small -command ::search::material::any
   dialogbutton $f.current -textvar ::tr(CurrentBoard) -font $small -command {
-      ::search::material::zero
-      set bd [sc_pos board]
-      for {set i 0} {$i < 64} {incr i} {
-        set piece $::board::letterToPiece([ string index $bd $i ])
-        if {$piece != "e"  &&  $piece != "wk"  &&  $piece != "bk"} {
-          incr pMin($piece); set pMax($piece) $pMin($piece)
-        }
+    ::search::material::zero
+    set bd [sc_pos board]
+    for {set i 0} {$i < 64} {incr i} {
+      set piece $::board::letterToPiece([ string index $bd $i ])
+      if {$piece != "e"  &&  $piece != "wk"  &&  $piece != "bk"} {
+        incr pMin($piece); set pMax($piece) $pMin($piece)
       }
     }
-
+  }
+  
   menubutton $f.common -textvar ::tr(CommonEndings...) \
-    -menu $f.common.m -relief raised -font $small
+      -menu $f.common.m -relief raised -font $small
   menu $f.common.m -font $small
   set m $f.common.m
   $m add command -label [tr EndingPawns] -command {
@@ -338,41 +338,41 @@ proc ::search::material {} {
     array set pMin {wb 2 bn 2 wm 2 bm 2}
     array set pMax {wq 1 bq 1 wr 2 br 2 wb 2 bn 2 wm 2 bm 2 wp 8 bp 8}
   }
-
+  
   pack $f.zero $f.reset $f.current $f.common -side left -pady 5 -padx 10
   #if {! $smDisplayed(Material)} {
   #  pack forget .sm.q .sm.r .sm.b .sm.n .sm.m .sm.p .sm.b1 .sm.mdiff
   #}
-
+  
   set f $w.mp.material.mdiff
   pack [frame $f] -side top
   label $f.label -font font_SmallBold -textvar ::tr(MaterialDiff:)
   entry $f.min -width 3 -relief sunken -textvar minMatDiff -font $small \
-    -justify right
+      -justify right
   bindFocusColors $f.min
   label $f.sep -text "-" -font $small
   entry $f.max -width 3 -relief sunken -textvar maxMatDiff -font $small \
-    -justify right
+      -justify right
   bindFocusColors $f.max
   label $f.sep2 -text " " -font $small
   button $f.any -textvar ::tr(Any) -font $small -padx 1 -pady 1 \
-    -command {set minMatDiff -40; set maxMatDiff +40}
+      -command {set minMatDiff -40; set maxMatDiff +40}
   button $f.w1 -text " + " -font $small -padx 1 -pady 1 \
-    -command {set minMatDiff +1; set maxMatDiff +40}
+      -command {set minMatDiff +1; set maxMatDiff +40}
   button $f.equal -text " = " -font $small -padx 1 -pady 1 \
-    -command {set minMatDiff 0; set maxMatDiff 0}
+      -command {set minMatDiff 0; set maxMatDiff 0}
   button $f.b1 -text " - " -font $small -padx 1 -pady 1 \
-    -command {set minMatDiff -40; set maxMatDiff -1}
+      -command {set minMatDiff -40; set maxMatDiff -1}
   pack $f.label $f.min $f.sep $f.max -side left
   pack $f.sep2 $f.any $f.w1 $f.equal $f.b1 -side left
   set f [frame $w.mp.material.mdiff2]
   pack $f -side top
   label $f.explan -font $small \
-    -text "($::tr(MaterialDiff) = $::tr(White) - $::tr(Black); Q=9 R=5 B=3 N=3 P=1)"
+      -text "($::tr(MaterialDiff) = $::tr(White) - $::tr(Black); Q=9 R=5 B=3 N=3 P=1)"
   pack $f.explan -side top
-
+  
   addVerticalRule $w.mp
-
+  
   set f [frame $w.mp.patt]
   pack $f -side top
   
@@ -387,7 +387,7 @@ proc ::search::material {} {
   #}
   label $w.mp.patt.title -textvar ::tr(Patterns:) -font font_Bold
   pack $w.mp.patt.title -side top -pady 3
-
+  
   pack [frame $f.grid] -side top
   for { set i 1 } { $i <= $nPatterns } { incr i } {
     makeBoolMenu $f.grid.b$i pattBool($i)
@@ -408,15 +408,15 @@ proc ::search::material {} {
       grid $f.grid.sp_$i -row $row -column $column
     }
   }
-
+  
   updatePatternImages
-
+  
   ### Buttons that manipulate patterns:
   set f .sm.mp.patt.b2
   frame $f
   dialogbutton $f.clearPat -textvar ::tr(Clear) -command clearPatterns
   menubutton $f.common -textvar ::tr(CommonPatterns...) \
-    -menu $f.common.m -relief raised -font $small
+      -menu $f.common.m -relief raised -font $small
   menu $f.common.m -font $small
   $f.common.m add command -label [tr PatternWhiteIQP] -command {
     if {$pMin(wp) < 1} { set pMin(wp) 1 }
@@ -426,13 +426,13 @@ proc ::search::material {} {
     if {$pMin(wp) < 1} { set pMin(wp) 1 }
     if {$pMin(bp) < 1} { set pMin(bp) 1 }
     setPatterns {{wp d 5 Yes} {wp c ? No} {wp e ? No} {wp d 4 No} \
-                   {bp e 6 Yes} {bp c ? No} {bp d ? No}}
+          {bp e 6 Yes} {bp c ? No} {bp d ? No}}
   }
   $f.common.m add command -label [tr PatternWhiteIQPBreakC6] -command {
     if {$pMin(wp) < 1} { set pMin(wp) 1 }
     if {$pMin(bp) < 1} { set pMin(bp) 1 }
     setPatterns {{wp d 5 Yes} {wp c ? No} {wp e ? No} {wp d 4 No} \
-                   {bp c 6 Yes} {bp e ? No} {bp d ? No}}
+          {bp c 6 Yes} {bp e ? No} {bp d ? No}}
   }
   $f.common.m add command -label [tr PatternBlackIQP] -command {
     if {$pMin(bp) < 1} { set pMin(bp) 1 }
@@ -442,7 +442,7 @@ proc ::search::material {} {
     if {$pMin(wp) < 1} { set pMin(wp) 1 }
     if {$pMin(bp) < 1} { set pMin(bp) 1 }
     setPatterns {{wp d ? Yes} {wp c ? No} {wp e ? No} \
-                   {bp d ? Yes} {bp c ? No} {bp e ? No}}
+          {bp d ? Yes} {bp c ? No} {bp e ? No}}
   }
   $f.common.m add command -label [tr PatternCoupleC3D4] -command {
     set pMin(wp) 4; set pMax(wp) 6
@@ -462,7 +462,7 @@ proc ::search::material {} {
     if {$pMin(wp) < 2} { set pMin(wp) 2 }
     if {$pMax(wp) > 7} { set pMax(wp) 7 }
     setPatterns {{wp c 4 Yes} {wp e 4 Yes} {bp d ? Yes} {wp d ? No}
-                 {bp c ? No} {bp d 5 No}}
+      {bp c ? No} {bp d 5 No}}
   }
   $f.common.m add command -label [tr PatternRookSacC3] -command {
     set pMin(br) 2; set pMax(br) 2
@@ -487,18 +487,18 @@ proc ::search::material {} {
     set pMin(wb) 2; set pMin(bb) 2
     setPatterns { {wb b 2 Yes} {wb g 2 Yes} {bb b 7 Yes} {bb g 7 Yes} }
   }
-
+  
   pack $f -side top
   pack $f.clearPat $f.common -side left -pady 5 -padx 10
   #if {! $smDisplayed(Patterns)} {
   #  pack forget $w.patt $w.b2
   #}
   updatePatternImages
-
+  
   addHorizontalRule $w
-
+  
   ### Now the move counter:
-
+  
   set f $w.bishops
   pack [frame $f] -side top
   label $f.t1 -text "1" -font font_Small
@@ -507,13 +507,13 @@ proc ::search::material {} {
   label $f.t4 -image bb20
   label $f.t5 -textvar ::tr(squares:) -font font_Small
   radiobutton $f.same -textvar ::tr(SameColor) -variable oppBishops \
-    -value "Same" -padx 5 -pady 4 -font font_Small
+      -value "Same" -padx 5 -pady 4 -font font_Small
   radiobutton $f.opp -textvar ::tr(OppColor) -variable oppBishops \
-    -value "Opposite" -padx 5 -pady 4 -font font_Small
+      -value "Opposite" -padx 5 -pady 4 -font font_Small
   radiobutton $f.either -textvar ::tr(Either) -variable oppBishops \
-    -value "Either" -padx 5 -pady 4 -font font_Small
+      -value "Either" -padx 5 -pady 4 -font font_Small
   foreach i {t1 t2 t3 t4 t5 same opp either} { pack $f.$i -side left }
-
+  
   set f $w.move
   pack [frame $f] -side top -ipady 5
   label $f.fromlab -textvar ::tr(MoveNumberRange:)
@@ -528,77 +528,81 @@ proc ::search::material {} {
   bindFocusColors $f.to
   bindFocusColors $f.hmoves
   pack $f.fromlab $f.from $f.tolab $f.to $f.space \
-    $f.label1 $f.hmoves $f.label2 -side left
-
+      $f.label1 $f.hmoves $f.label2 -side left
+  
   addHorizontalRule $w
   ::search::addFilterOpFrame $w 1
   addHorizontalRule $w
-
+  
   ### Progress bar:
-
+  
   canvas $w.progress -height 20 -width 300 -bg white -relief solid -border 1
   $w.progress create rectangle 0 0 0 0 -outline blue -fill blue -tags bar
   $w.progress create text 295 10 -anchor e -font font_Regular -tags time \
-    -fill black -text "0:00 / 0:00"
-
+      -fill black -text "0:00 / 0:00"
+  
   ### Last of all, the buttons frame:
-
+  
   set f $w.b3
   pack [frame $f] -side top -ipady 5 -fill x
   checkbutton $f.ignorecol -textvar ::tr(IgnoreColors) \
-    -variable ignoreColors -padx 4
-
+      -variable ignoreColors -padx 4
+  
   dialogbutton $f.save -textvar ::tr(Save...) -padx 10 -command ::search::material::save
-
+  
   dialogbutton $f.stop -textvar ::tr(Stop) -command sc_progressBar
   $f.stop configure -state disabled
-
+  
   dialogbutton $f.search -textvar ::tr(Search) -command {
     busyCursor .
     .sm.b3.stop configure -state normal
     grab .sm.b3.stop
     sc_progressBar .sm.progress bar 301 21 time
     set str [sc_search material \
-               -wq [list $pMin(wq) $pMax(wq)] -bq [list $pMin(bq) $pMax(bq)] \
-               -wr [list $pMin(wr) $pMax(wr)] -br [list $pMin(br) $pMax(br)] \
-               -wb [list $pMin(wb) $pMax(wb)] -bb [list $pMin(bb) $pMax(bb)] \
-               -wn [list $pMin(wn) $pMax(wn)] -bn [list $pMin(bn) $pMax(bn)] \
-               -wm [list $pMin(wm) $pMax(wm)] -bm [list $pMin(bm) $pMax(bm)] \
-               -wp [list $pMin(wp) $pMax(wp)] -bp [list $pMin(bp) $pMax(bp)] \
-               -flip $ignoreColors -filter $::search::filter::operation \
-               -range [list $minMoveNum $maxMoveNum] \
-               -length $minHalfMoves -bishops $oppBishops \
-               -diff [list $minMatDiff $maxMatDiff] \
-               -patt "$pattBool(1) $pattPiece(1) $pattFyle(1) $pattRank(1)" \
-               -patt "$pattBool(2) $pattPiece(2) $pattFyle(2) $pattRank(2)" \
-               -patt "$pattBool(3) $pattPiece(3) $pattFyle(3) $pattRank(3)" \
-               -patt "$pattBool(4) $pattPiece(4) $pattFyle(4) $pattRank(4)" \
-               -patt "$pattBool(5) $pattPiece(5) $pattFyle(5) $pattRank(5)" \
-               -patt "$pattBool(6) $pattPiece(6) $pattFyle(6) $pattRank(6)" \
-               -patt "$pattBool(7) $pattPiece(7) $pattFyle(7) $pattRank(7)" \
-               -patt "$pattBool(8) $pattPiece(8) $pattFyle(8) $pattRank(8)" \
-               -patt "$pattBool(9) $pattPiece(9) $pattFyle(9) $pattRank(9)" \
-               -patt "$pattBool(10) $pattPiece(10) $pattFyle(10) $pattRank(10)" ]
+        -wq [list $pMin(wq) $pMax(wq)] -bq [list $pMin(bq) $pMax(bq)] \
+        -wr [list $pMin(wr) $pMax(wr)] -br [list $pMin(br) $pMax(br)] \
+        -wb [list $pMin(wb) $pMax(wb)] -bb [list $pMin(bb) $pMax(bb)] \
+        -wn [list $pMin(wn) $pMax(wn)] -bn [list $pMin(bn) $pMax(bn)] \
+        -wm [list $pMin(wm) $pMax(wm)] -bm [list $pMin(bm) $pMax(bm)] \
+        -wp [list $pMin(wp) $pMax(wp)] -bp [list $pMin(bp) $pMax(bp)] \
+        -flip $ignoreColors -filter $::search::filter::operation \
+        -range [list $minMoveNum $maxMoveNum] \
+        -length $minHalfMoves -bishops $oppBishops \
+        -diff [list $minMatDiff $maxMatDiff] \
+        -patt "$pattBool(1) $pattPiece(1) $pattFyle(1) $pattRank(1)" \
+        -patt "$pattBool(2) $pattPiece(2) $pattFyle(2) $pattRank(2)" \
+        -patt "$pattBool(3) $pattPiece(3) $pattFyle(3) $pattRank(3)" \
+        -patt "$pattBool(4) $pattPiece(4) $pattFyle(4) $pattRank(4)" \
+        -patt "$pattBool(5) $pattPiece(5) $pattFyle(5) $pattRank(5)" \
+        -patt "$pattBool(6) $pattPiece(6) $pattFyle(6) $pattRank(6)" \
+        -patt "$pattBool(7) $pattPiece(7) $pattFyle(7) $pattRank(7)" \
+        -patt "$pattBool(8) $pattPiece(8) $pattFyle(8) $pattRank(8)" \
+        -patt "$pattBool(9) $pattPiece(9) $pattFyle(9) $pattRank(9)" \
+        -patt "$pattBool(10) $pattPiece(10) $pattFyle(10) $pattRank(10)" ]
     grab release .sm.b3.stop
     .sm.b3.stop configure -state disabled
     unbusyCursor .
     #tk_messageBox -type ok -title $::tr(SearchResults) -message $str
     .sm.status configure -text $str
-    set glstart 1
-    ::windows::gamelist::Refresh
+    # set glstart 1
+    # ::windows::gamelist::Refresh
+    
+    # Go to the first game in the filter
+    ::game::Load [sc_filter first]
+    
     ::windows::stats::Refresh
   }
-
+  
   dialogbutton $f.cancel -textvar ::tr(Close) \
-    -command { focus .; destroy .sm }
-
+      -command { focus .; destroy .sm }
+  
   pack $f.ignorecol $w.b3.save -side left -pady 5 -padx 5
   pack $w.b3.cancel $w.b3.search $w.b3.stop -side right -pady 5 -padx 5
   pack $w.progress -side top -pady 2
-
+  
   label $w.status -text "" -width 1 -font font_Small -relief sunken -anchor w
   pack $w.status -side bottom -fill x
-
+  
   # update
   wm resizable $w 0 0
   standardShortcuts $w
@@ -609,18 +613,18 @@ proc ::search::material {} {
 proc ::search::material::save {} {
   global pMin pMax ignoreColors minMoveNum maxMoveNum minHalfMoves
   global pattPiece pattFyle pattRank pattBool oppBishops nPatterns
-
+  
   set ftype { { "Scid SearchOptions files" {".sso"} } }
   set fName [tk_getSaveFile -initialdir [pwd] -filetypes $ftype -title "Create a SearchOptions file"]
   if {$fName == ""} { return }
-
+  
   if {[string compare [file extension $fName] ".sso"] != 0} {
     append fName ".sso"
   }
-
+  
   if {[catch {set searchF [open $fName w]}]} {
     tk_messageBox -title "Error: Unable to open file" -type ok -icon error \
-      -message "Unable to create SearchOptions file: $fName"
+        -message "Unable to create SearchOptions file: $fName"
     return
   }
   puts $searchF "\# SearchOptions File created by Scid [sc_info version]"
@@ -645,7 +649,7 @@ proc ::search::material::save {} {
     puts $searchF "set pattBool($i) $pattBool($i)"
   }
   tk_messageBox -type ok -icon info -title "Search Options saved" \
-    -message "Material/pattern search options saved to: $fName"
+      -message "Material/pattern search options saved to: $fName"
   close $searchF
 }
 
